# example-runner-sandbox

./: .cruft.json  .gitignore  404.html  CONTRIBUTING.md  Makefile  README.md  about.yaml  index.html  mkdocs.yml  project.Makefile  pyproject.toml  sitemap.xml
.github/workflows/: deploy-docs.yaml  main.yaml
NamedThing/: index.html
Person/: index.html
PersonCollection/: index.html
PersonStatus/: index.html
about/: index.html
age_in_years/: index.html
birth_date/: index.html
description/: index.html
entries/: index.html
example-runner-sandbox/: index.html
examples/: README.md
id/: index.html
name/: index.html
primary_email/: index.html
project/excel/: example_runner_sandbox.xlsx
project/graphql/: example_runner_sandbox.graphql
project/jsonld/: example_runner_sandbox.context.jsonld  example_runner_sandbox.jsonld
project/jsonschema/: example_runner_sandbox.schema.json
project/owl/: example_runner_sandbox.owl.ttl
project/prefixmap/: example_runner_sandbox.yaml
project/protobuf/: example_runner_sandbox.proto
project/shacl/: example_runner_sandbox.shacl.ttl
project/shex/: example_runner_sandbox.shex
project/sqlschema/: example_runner_sandbox.sql
runnable_examples/invalid_examples/: Person-minimal.yaml
runnable_examples/output/: Person-minimal.json  Person-minimal.ttl  Person-minimal.yaml  README.md
runnable_examples/valid_examples/: Person-minimal.yaml
search/: search_index.json
src/docs/: about.md
tests/: __init__.py  test_data.py
types/: index.html
vital_status/: index.html
(+3 files in other folders)
