[tool.poetry]
name = "example_runner_sandbox"
version = "0.1.0"
description = "A place to learn about linkml-run-examples. Brought to you by the LinkML Cookiecutter."
authors = ["Mark Andrew Miller <mam@lbl.gov>"]
license = "MIT"
readme = "README.md"
include = ["README.md", "src/example_runner_sandbox/schema", "project"]

[tool.poetry.dependencies]
python = "^3.9"
linkml-runtime = "^1.4"
cruft = "^2.12.0"

[tool.poetry.group.dev.dependencies]
linkml = "^1.4.4"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.poetry.dev-dependencies]
linkml = "^1.4"
mkdocs-material = "^9.0"
mkdocs-mermaid2-plugin = "^0.6.0"
schemasheets = "^0.1.19"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.extras]
docs = ["linkml", "mkdocs-material"]